# system-pdv-pro

./: .gitignore  README.md  app.html  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yaml  build-windows.yml
ci/: build-windows.yml
scripts/: build-frontend.js
server/: .gitignore  package-lock.json  package.json  schema.js  server.js
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.txt
src-tauri/src/: lib.rs  main.rs  printing.rs
