[package]
name = "system-pdv-pro"
version = "2.0.0"
description = "System PDV PRO"
authors = ["System PDV PRO"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "system_pdv_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
